# sycamore-trunk-gitpod-template

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md
src/: main.rs
